cleaned up folder and nb

--- a/06_080424/source_data/subs_to_xml.ipynb
+++ b/06_080424/source_data/subs_to_xml.ipynb
@@ -35,7 +35,11 @@
      "text": [
       "<re.Match object; span=(0, 78), match='The ethical dilemma of self-driving cars - Patric>\n",
       "<re.Match object; span=(0, 86), match='The Turing test： Can a computer pass for a human？>\n",
+      "<re.Match object; span=(0, 86), match='The Turing test： Can a computer pass for a human？>\n",
       "<re.Match object; span=(0, 62), match='Can robots be creative？ - Gil Weinberg [Rh9vBczqM>\n",
+      "<re.Match object; span=(0, 73), match='Can machines read your emotions？ - Kostas Karpouz>\n",
+      "<re.Match object; span=(0, 65), match='The most important century in human history [-T__>\n",
+      "<re.Match object; span=(0, 60), match='Can robots be creative？ - Gil Weinberg [Rh9vBczqM>\n",
       "<re.Match object; span=(0, 67), match='The most important century in human history [-T__>\n",
       "<re.Match object; span=(0, 88), match='The Turing test： Can a computer pass for a human？>\n",
       "<re.Match object; span=(0, 65), match='The most important century in human history [-T__>\n",
@@ -44,9 +48,12 @@
       "<re.Match object; span=(0, 75), match='Can machines read your emotions？ - Kostas Karpouz>\n",
       "<re.Match object; span=(0, 51), match='How will AI change the world？ [RzkD_rTEBYs].en.sr>\n",
       "<re.Match object; span=(0, 79), match='How does artificial intelligence learn？ - Briana >\n",
+      "<re.Match object; span=(0, 76), match='The ethical dilemma of self-driving cars - Patric>\n",
+      "<re.Match object; span=(0, 79), match='How does artificial intelligence learn？ - Briana >\n",
       "<re.Match object; span=(0, 81), match='How does artificial intelligence learn？ - Briana >\n",
       "<re.Match object; span=(0, 76), match='The ethical dilemma of self-driving cars - Patric>\n",
       "<re.Match object; span=(0, 60), match='Can robots be creative？ - Gil Weinberg [Rh9vBczqM>\n",
+      "<re.Match object; span=(0, 51), match='How will AI change the world？ [RzkD_rTEBYs].en.sr>\n",
       "None\n"
      ]
     }
@@ -92,10 +99,10 @@
       "Processing The Turing test： Can a computer pass for a human？ - Alex Gendler [3wLqsRLvV-c].en.srv3\n",
       "Processing Can robots be creative？ - Gil Weinberg [Rh9vBczqMk0].info.json\n",
       "Processing Can robots be creative？ - Gil Weinberg [Rh9vBczqMk0].en.srv3\n",
-      "Processing The most important century in human history [-T__YWoq45I].info.json\n",
-      "Processing The most important century in human history [-T__YWoq45I].en.srv3\n",
       "Processing Can machines read your emotions？ - Kostas Karpouzis [QFk3e5PcK7s].info.json\n",
       "Processing Can machines read your emotions？ - Kostas Karpouzis [QFk3e5PcK7s].en.srv3\n",
+      "Processing The most important century in human history [-T__YWoq45I].info.json\n",
+      "Processing The most important century in human history [-T__YWoq45I].en.srv3\n",
       "Processing How will AI change the world？ [RzkD_rTEBYs].info.json\n",
       "Processing How will AI change the world？ [RzkD_rTEBYs].en.srv3\n",
       "Processing How does artificial intelligence learn？ - Briana Brownell [0yCJMt9Mx9c].info.json\n",
